# serializers

./: .gitignore  .pre-commit-config.yaml  README.md  requirements.txt
.github/workflows/: build.yml  test.yaml
example/: CMakeLists.txt
example/input/: bar.proto
example/output/: CMakeLists.txt  bar.h  bar.hpp  foo.h
example/output/inc/: bar.hpp  bar.pb.h
example/output/proto/: bar.proto
example/output/src/: bar.cpp  bar.pb.cc  foo.cpp
scripts/: .proto_sources.txt  compile_proto.sh  generate_pb  generate_schemas
src/generator/: main.py  proto_utils.py  utils.py
src/templates/: CMakeLists.txt.j2  __init__.py.j2  conftest.py.j2  serializers.h.j2  serializers.py.j2  test.py.j2  wrapper.cc.j2  wrapper.cpp.j2  wrapper.h.j2  wrapper.py.j2
